@@ -1,3 +1,8 @@
+2009-07-22  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tkFocus.c (TkFocusDeadWindow): [Bug 2496114]: Ensure that
+	focus desynchronization doesn't cause a crash.
+
 2009-07-20  Donal K. Fellows  <dkf@users.sf.net>
 
 	* tests/clipboard.test (clipboard-6.2): [Bug 2824378]: Corrected
